--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /.build
 /Packages
 /*.xcodeproj
+
+# Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
+# hence it is not needed unless you have added a package configuration file to your project
+.swiftpm
